<resources>
    <string name="app_name">Warehouse Manager</string>
    <string name="start">START</string>
    <string name="wel">Quản Lý Kho Hàng</string>
    <string name="txtDetailWel">Chào mừng bạn đến với ứng dụng quản lý kho hàng</string>
    <string name="version">Version 1.0 by me</string>
    <string name="image_welcome">Image Welcome</string>
    <string name="forgetPassword"><u>Quên mật khẩu?</u></string>
    <string name="pass">Mật khẩu:</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="account">Tài khoản:</string>
    <string name="subtitle">Đăng nhập để tiếp tục</string>
    <string name="welcome_back">Chào mừng trở lại!</string>
    <string name="pass_require">Yêu cầu mật khẩu mới</string>
    <string name="number">Số điện thoại:</string>
    <string name="submit">XÁC NHẬN</string>
    <string name="back_to_login"><u>Quay về màn hình đăng nhập</u></string>
    <string name="email">Email</string>
    <string name="full_name">Họ tên</string>
    <string name="confirm_pass">Xác nhận mật khẩu</string>
    <string name="add_account">Thêm tài khoản mới</string>
    <string name="confirm">XÁC NHẬN</string>
    <string name="cancel">HỦY</string>
    <string name="remember">Lưu tài khoản</string>
    <string name="list_account">Danh sách tài khoản</string>
    <string name="role">Chức vụ</string>
    <string name="edit_user">Sửa tài khoản</string>
    <string name="admin">Admin</string>
    <string name="staff">Nhân viên</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="confirm_new_pass">Xác nhận mật khẩu mới</string>
    <string name="product_list">Danh sách sản phẩm</string>
    <string name="serial_number">Số lưu kho</string>
    <string name="category">Thể loại</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="quantity">Số lượng</string>
    <string name="detail">Chi tiết</string>
    <string name="price">Giá</string>
    <string name="edit_product">Sửa sản phẩm</string>
    <string name="del_product">Xóa sản phẩm</string>
    <string name="image_product">Hình ảnh sản phẩm</string>
    <string name="add_product">Thêm sản phẩm mới</string>
    <string name="add_category">Thêm thể loại mới</string>
    <string name="update_category">Cập nhật thể loại</string>
    <string name="add_Invoice">Thêm hóa đơn mới</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_start">Ngày bắt đầu</string>

</resources>