<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AddAccount">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/add_account"
        android:textAllCaps="true"
        android:textColor="#2A822D"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserAdd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/account"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassAdd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableEnd="@drawable/visible"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmPassAdd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableEnd="@drawable/visible"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/role"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rdoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdoAdminAdd"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:text="@string/admin"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdoNvAdd"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:text="@string/staff"
            android:textSize="18sp" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/black"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameAdd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/black"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailAdd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@drawable/confirm_button"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCancelAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/cancel_button"
            android:layout_marginStart="20dp"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</LinearLayout>