<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/update_category"
        android:textAllCaps="true"
        android:textColor="#2A822D"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameEditCatRow"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/category"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmEditCatRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@drawable/confirm_button"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCancelEditCatRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/cancel_button"
            android:layout_marginStart="20dp"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</LinearLayout>